--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+	<link rel="prefetch" href="1337.svg">
+
 	<script type="text/javascript"
 			src="data.js"></script>
 	<script type="text/javascript"
