Fix logo in dark mode

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
 			}
 		}
 
+		#leetLogo {
+			background-image: url('1337-light.svg');
+		}
+
 		@media (prefers-color-scheme: dark) {
 			#app {
 				background: #000;
@@ -137,6 +141,10 @@
 
 			#app .devider {
 				border-color: #333;
+			}
+
+			#leetLogo {
+				background-image: url('1337-dark.svg');
 			}
 		}
 	</style>
