--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<link rel="prefetch" href="1337.svg">
+	<link rel="prefetch" href="1337-light.svg"/>
 
 	<script type="text/javascript"
 			src="data.js"></script>
@@ -15,129 +15,7 @@
 	<script type="text/javascript"
 			src="timezones.js"></script>
 	<script src="leettime.js"></script>
-	<style>
-		html, body {
-			padding: 0;
-			margin: 0;
-			color: #aaa;
-			font-family: Calibri;
-		}
-
-		*, *:before, *:after {
-			box-sizing: border-box;
-		}
-
-		h1, h2, h3, h4, h5, h6 {
-			margin: 0;
-			padding: 0;
-			color: #3B854A;
-		}
-
-		.box {
-			display: flex;
-			flex-direction: column;
-			height: 100vh;
-		}
-
-		.devider {
-			border-top: 2px #EBEBEB solid;
-			margin: 1rem 20%;
-			width: 60%;
-			height: 1px;
-		}
-
-		.leet {
-			display: flex;
-			justify-content: center;
-			flex-grow: 1;
-			background: url('1337-light.svg');
-			background-repeat: no-repeat;
-			background-position: center;
-		}
-
-		.countries {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			height: 15rem;
-			padding: 5rem 0;
-		}
-
-		.countries .country {
-			display: flex;
-		}
-
-		.countries .country .flag {
-			margin-right: 2rem;
-			height: 4.25rem;
-			width: 4.25rem;
-			position: relative;
-		}
-
-		.countries .country .flag img {
-			position: absolute;
-			top: 0;
-			left: 0;
-			max-width: 100%;
-			max-height: 100%;
-		}
-
-		.countries .country h1 a {
-			font-size: 3rem;
-			line-height: 3rem;
-			text-decoration: none;
-			color: #3B854A;
-			text-transform: uppercase;
-		}
-
-		.countries .country h4 {
-			text-transform: uppercase;
-			font-size: 1.25rem;
-			line-height: 1.25rem;
-			color: #B1C8BE;
-		}
-
-		.footer {
-			padding: 3rem 0 1rem 0;
-			text-align: center;
-		}
-
-		.footer h5 {
-			font-size: .875rem;
-			font-weight: bold;
-		}
-
-		#app.light {
-			background: #fff;
-		}
-
-		#app.dark {
-			background: #000;
-		}
-
-		#app.dark .devider {
-			border-color: #333;
-		}
-
-		/* Transitions */
-		#app, .devider {
-			transition: border-color ease .3s,
-						background-color ease .3s;
-		}
-
-		#app .leet {
-			transition: background-image ease .3s;
-		}
-
-		@media screen and (max-width: 560px) {
-			.countries {
-				height: 20rem;
-			}
-			.countries .country {
-				flex-direction: column;
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
