Switch dark mode on click

--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
 
 		const leetTime = new LeetTime();
 		leetTime.detectDarkMode();
-		// leetTime.start({ darkMode: true });
-		// setTimeout(() => {
-		// 	leetTime.stop();
-		// }, 4000);
+
+		document.addEventListener('click', leetTime.switchDarkMode);
 	</script>
 </body>
 </html>
