Add switch for leet logo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 		const leetTime = new LeetTime();
 		leetTime.detectDarkMode();
 
-		document.addEventListener('click', leetTime.switchDarkMode);
+		document.addEventListener('click', leetTime.switch);
+		// leetTime.start(['darkMode', 'logo']);
 	</script>
 </body>
 </html>
