Fix a rounding error for generating the random idx

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		if(nlIdx > -1) {
 			country = countryCounts[nlIdx];
 		} else {
-			let randIdx = Math.floor(Math.random() * (countryCounts.length - 1));
+			let randIdx = Math.floor(Math.random() * (countryCounts.length));
 			country = countryCounts[randIdx];
 		}
 
