--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<div class="footer">
 				<div>Waar is het <b>1337</b> wordt u aangeboden door: </div>
-				<div><h4>Infocaster en Jovero</h4></div>
+				<div><h4>Products en Jovero</h4></div>
 			</div>
 		</div>
 	</div>
