--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="prefetch" href="1337-light.svg"/>
-
-    <script type="text/javascript"
-            src="data.js"></script>
-    <script type="text/javascript"
-            src="flags.js"></script>
-    <script type="text/javascript"
-            src="timezones.js"></script>
-    <script src="leettime.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -44,6 +37,9 @@
             </div>
         </div>
     </div>
+
+    <script src="data.js"></script>    
+    <script src="leettime.js"></script>
 
     <script type="text/javascript">
 
