Add meta description tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <meta name="description" content="Waar op de wereld is het 13:37? Wij hebben het antwoord!">
+
     <link rel="prefetch" href="1337-light.svg"/>
     
     <link rel="stylesheet" href="style.css">
